--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webvideo",
+  "author": "Brandon Oden <brandroid369@gmail.com>",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
