--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "webvideo",
   "author": "Brandon Oden <brandroid369@gmail.com>",
   "version": "0.1.0",
+  "homepage": "https://bnoden.github.io/webvideo",
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -9,6 +10,8 @@
     "react-scripts": "1.0.13"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
