--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "author": "Brandon Oden <brandroid369@gmail.com>",
   "version": "0.1.0",
   "dependencies": {
+    "ffmpeg": "0.0.4",
+    "ffprobe": "^1.1.0",
+    "fluent-ffmpeg": "^2.1.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
@@ -15,5 +18,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.24.1"
   }
 }
