--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "author": "Brandon Oden <brandroid369@gmail.com>",
   "version": "0.1.0",
   "dependencies": {
+    "dotenv": "^4.0.0",
+    "ffmpeg-downloader": "^1.1.2",
+    "fluent-ffmpeg": "^2.1.2",
+    "node-env-run": "^2.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
