--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-env": "^1.6.1"
   }
 }
